--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -5,7 +5,10 @@
 /*
 ** This is the icon font. It was created from Font Awesome icons compiled into
 ** a custom file by fontello.com. This application does not need all of the
-** font files provided.
+** icons provided by the font at this time.
+**
+** For IntelliJ, ignore the fact that it believes the url for the font is
+** wrong. Using a url it believes is correct doesn't actually work.
  */
 
 @font-face {
@@ -15,6 +18,7 @@
     font-style: normal;
 }
 
+/*
 .cw-icon:before {
     content: '\e800';
 }
@@ -34,11 +38,13 @@
 .link-icon:before {
     content: '\e804';
 }
+*/
 
 .floppy-icon:before {
     content: '\e805';
 }
 
+/*
 .indent-left-icon:before {
     content: '\e806';
 }
@@ -82,6 +88,7 @@
 .question-circle-o-icon:before {
     content: '\f29c';
 }
+*/
 
 :root {
     /* Some colors. */
@@ -146,7 +153,7 @@
     /*--blockquote-color: #777777;*/
     /*--menu-item-link-color: #a0e0ff;*/
     /*!* For in-line code segments of text. *!*/
-    /*--code-background-color: #f0f0f0;*/
+    --code-background-color: #f4f4f4;
     /*!* Color and transparency for background overlay used during modal*/
     /*   dialogs. Same color as --code-background-color (but decimal*/
     /*   rgb values) and slightly transparent.*/
@@ -155,7 +162,7 @@
     /*!* For code blocks and pre-formatted blocks. *!*/
     /*--code-highlight-color: #f0f0f0;*/
     /*!* For the border around code. *!*/
-    /*--code-border-color: #575757;*/
+    --code-border-color: #aaa;
 
     --enabled-button-bar-icon-text-color: #acafaf;
     /*!* For disabled editor button bar icons.*!*/
@@ -266,6 +273,29 @@ small {
     font-size: 0.833rem;
 }
 
+code {
+    background: var(--code-background-color);
+    border: 1px solid var(--code-border-color);
+    border-radius: 5px;
+}
+
+pre code {
+    background: var(--code-background-color);
+    border: 1px solid var(--code-border-color);
+    border-left: 3px solid var(--content-link-visited-color);
+    color: var(--form-button-color);
+    page-break-inside: avoid;
+    font-family: var(--fixed-font-family);
+    font-size: 0.9rem;
+    line-height: 1.6;
+    margin-bottom: 1.6rem;
+    max-width: 100%;
+    overflow: auto;
+    padding: 1rem 1.5rem;
+    display: block;
+    word-wrap: break-word;
+}
+
 /*
 ** If ClojureScript is inserting its app here, and the layout has flexbox
 ** elements that are expected to occupy remaining height (think header,
@@ -321,7 +351,6 @@ small {
     font-family: var(--demo-font-family);
     font-size: 1.1rem;
     margin-left: calc(0.5rem + 16px + 1px);
-    /*transition: color 0.3s ease-in-out;*/
 }
 
 .banner--title-container {
@@ -394,7 +423,6 @@ small {
 
 .banner--title-editor input:active,
 .banner--file-name-editor input:active {
-    /*background-color: white;*/
 }
 
 /* Corresponds to border thickness and width of drag element in outline container. */
@@ -463,7 +491,12 @@ small {
     min-width: 0;
 }
 
-.outline-container p,
+.outline-container p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+/*.outline-container p, DDC, 28 Nov 2020 */
 .note-container p {
     margin-left: 17px;
     color: var(--active-border-color);
@@ -472,7 +505,7 @@ small {
 }
 
 /*.Site-header p:hover,*/
-.outline-container p:hover,
+/*.outline-container p:hover, DDC, 28 Nov 2020 */
 .note-container p:hover {
     color: var(--body-text-color);
 }
@@ -675,7 +708,6 @@ small {
 
 .note-tab-control--add-note-button {
     padding: 5px;
-    /*margin-left: auto;*/
     margin-right: 1rem;
 
     color: var(--body-text-color);
